<resources>
    <string name="app_name">AndroidTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_name">Book Name</string>
    <string name="price">Price</string>
    <string name="doi">DOI</string>
    <string name="add_new">Add New</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="submit">Submit</string>
</resources>